--- a/LinkedInUI/app/src/main/AndroidManifest.xml
+++ b/LinkedInUI/app/src/main/AndroidManifest.xml
@@ -18,6 +18,12 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".SignUpActivity"
+            android:exported="false" />
+        <activity
+            android:name=".LoginActivity"
+            android:exported="false" />
+        <activity
             android:name=".IPGetterActivity"
             android:exported="false" />
         <activity
