--- a/LinkedInUI/app/src/main/AndroidManifest.xml
+++ b/LinkedInUI/app/src/main/AndroidManifest.xml
@@ -18,6 +18,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".CreateProfileActivity"
+            android:exported="false" />
+        <activity
             android:name=".SignUpActivity"
             android:exported="false" />
         <activity
