--- a/LinkedInUI/app/build.gradle
+++ b/LinkedInUI/app/build.gradle
@@ -51,10 +51,16 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'com.squareup.retrofit2:retrofit-mock:2.3.0'
     implementation 'com.squareup.retrofit2:converter-scalars:2.3.0'
+    implementation 'org.projectlombok:lombok:1.18.32'
     annotationProcessor 'org.projectlombok:lombok:1.18.32'
 
     implementation 'commons-io:commons-io:2.11.0'
     implementation 'javax.servlet:javax.servlet-api:3.1.0'
     implementation 'com.squareup.okhttp3:okhttp:4.9.0'
     implementation 'com.google.android.material:material:1.12.0'
+
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'com.airbnb.android:lottie:6.0.0'
+
+
 }
