--- a/LinkedInUI/app/build.gradle
+++ b/LinkedInUI/app/build.gradle
@@ -61,6 +61,7 @@ dependencies {
 
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.airbnb.android:lottie:6.0.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
 
 }
